--- a/recursos/css/style.css
+++ b/recursos/css/style.css
@@ -1,62 +1,28 @@
-.dropdown-menu{
-    position:absolute;
-    z-index:1000;
-    display:none;
-    min-width:10rem;
-    padding:.5rem 0;
-    margin:0;
-    font-size:1rem;
-    text-align:center;
-    list-style:none;
-    background-color:#13322b;
-    background-clip:padding-box;
-    border:1px solid transparent;
-    border-radius:.25rem;
-}
-.dropdown-item{
-    display:block;
-    width:100%;
-    padding:.25rem 1rem;
-    clear:both;
-    font-weight:400;
-    color:#fff;
-    text-align:inherit;
-    text-decoration:none;
-    white-space:nowrap;
-    background-color:transparent;
-    border:0;
-}
-
-.dropdown-item:focus,.dropdown-item:hover{
-    color:#d4c19c;
-    background-color:#13322b;
-}
-  
-.bg-fer{
+.bg-sicacep{
     --bs-bg-opacity:1;
     background-color: #13322b;
 
 }
 
-.navbar-fer .navbar-brand{
+.navbar-sicacep .navbar-brand{
     color:#d4c19c;
 
 }
 
-.navbar-fer .navbar-brand:focus,.navbar-fer .navbar-brand:hover{
+.navbar-sicacep .navbar-brand:focus,.navbar-sicacep .navbar-brand:hover{
     color:#b38E5d;
 
 }
 
-.navbar-fer .navbar-nav .nav-link{
+.navbar-sicacep .navbar-nav .nav-link{
     color: #fff;
 
 }
-.navbar-fer .navbar-nav .nav-link:focus,.navbar-fer .navbar-nav .nav-link:hover{
+.navbar-sicacep .navbar-nav .nav-link:focus,.navbar-sicacep .navbar-nav .nav-link:hover{
     color:#d4c19c;
 }
 
-.navbar-fer .navbar-toggler-icon{
+.navbar-sicacep .navbar-toggler-icon{
     background-image:url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28212, 193, 156, 1.00%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
 }
   
